styles.css
.searchpage {
    margin: auto;
    width: 50VW;
    text-align: center;
    
}

.searchpage img{
    margin-top: 100px;
    width: 150px;
}

.searchpage input{
    width: 400px;
    height: 35px;
    margin: 20px 0;
    border: 1px solid #c4c4c4;
    border-radius: 20px;
    color: #5b5b5b
}

button {
    padding: 10px 18px;
    font-size: 15px; 
    border: 0.2px solid #1a5fd0;
    border-radius: 5px;
    background-color: #4285f3;
    color: white ;
    display: block;
}

.searchpage button{
    margin: auto;
}

button:hover {
    background-color: #5998ff;
}

